--- a/app/packages/pages/client/templates/layouts/master_layout/master_layout.html
+++ b/app/packages/pages/client/templates/layouts/master_layout/master_layout.html
@@ -129,6 +129,7 @@
 </aside>
 <!-- Content Wrapper. Contains page content -->
 {{#contents}}
+{{> bpNotificationsCheckbox}}
 {{> yield}}
 {{/contents}}
 
