--- a/app/packages/diary/client/templates/diary/list.html
+++ b/app/packages/diary/client/templates/diary/list.html
@@ -1,7 +1,7 @@
 <template name="diaryList">
 	  <div class="box">
 	    <div class="box-body table-responsive">
-	      {{> reactiveTable collection=col fields=fields}}
+	      {{> reactiveTable collection="diaries" fields=fields}}
 	    </div>
 	  </div>
 </template>
