--- a/app/packages/diary/client/templates/diary/admin.html
+++ b/app/packages/diary/client/templates/diary/admin.html
@@ -6,7 +6,7 @@
     <div class="box-body">
 	  <div class="box">
 	    <div class="box-body table-responsivesubmissionsAdminCalendar">
-	      {{> reactiveTable collection=col fields=fields}}
+	      {{> reactiveTable collection="diaries-admin" fields=fields}}
 	    </div>
 	  </div>
     </div>
