signature code total redo/first beta

--- a/app/packages/accounts/client/templates/role/list.html
+++ b/app/packages/accounts/client/templates/role/list.html
@@ -1,10 +1,10 @@
 <template name="RolesList">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Roles</h3>
       <span style="float:right">{{#linkTo route="insertRole"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Role</button>{{/linkTo}}</span>
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
   <table class="table table-hover">
     <thead>
       <tr>
