--- a/app/packages/pages/client/templates/widget/edit/edit.html
+++ b/app/packages/pages/client/templates/widget/edit/edit.html
@@ -4,7 +4,7 @@
   <!--div class="fill">
     <div class="contain" style="overflow-y:auto;padding:10px">
 
-      <div class="box">
+      <div class="box box-info">
         <div class="box-header with-border">
           <h3 class="box-title">
             Edit widget
@@ -16,7 +16,7 @@
             {{/if}}
           </div>
         </div>
-        <div class="box-body table-responsive"-->
+        <div class="box-body"-->
 
           {{#if destroyForm}}
             {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
