--- a/app/packages/accounts/client/templates/role/edit.html
+++ b/app/packages/accounts/client/templates/role/edit.html
@@ -1,5 +1,5 @@
 <template name="EditRole">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Edit role</h3>
       <span style="float:right">{{> quickRemoveButton collection="Meteor.roles" _id=obj._id beforeRemove=beforeRemove class="btn btn-danger"}}</span>
