--- a/app/packages/accounts/client/templates/role/insert.html
+++ b/app/packages/accounts/client/templates/role/insert.html
@@ -1,9 +1,9 @@
 <template name="InsertRole">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Insert role</h3>
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
   {{> quickForm collection="Meteor.roles" id="insertRoleForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </div>
 </div>
