--- a/app/packages/accounts/client/templates/user/edit.html
+++ b/app/packages/accounts/client/templates/user/edit.html
@@ -1,14 +1,11 @@
 <template name="EditUser">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">
         Edit user
       </h3>
-      {{#callable name="setSignature" userId=_id}}
-        <h2 class="btn btn-info setSignatureButton">Set signature</h2>
-      {{/callable}}
     </div>
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-body">
       {{> quickForm collection="Meteor.users" doc=this id="profileUpdateForm" type="update" omitFields="createdAt" buttonContent="Save Changes"}}
     </div>
   </div>
