--- a/app/packages/accounts/client/templates/user/list.html
+++ b/app/packages/accounts/client/templates/user/list.html
@@ -1,5 +1,5 @@
 <template name="UsersList">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">
         Users
