--- a/app/packages/diary/client/templates/diary/list.html
+++ b/app/packages/diary/client/templates/diary/list.html
@@ -1,6 +1,6 @@
 <template name="diaryList">
-	  <div class="box">
-	    <div class="box-body table-responsive">
+	  <div class="box box-info">
+	    <div class="box-body">
 	      {{> reactiveTable collection="diaries" fields=fields}}
 	    </div>
 	  </div>
