--- a/app/packages/diary/client/templates/diary/today.html
+++ b/app/packages/diary/client/templates/diary/today.html
@@ -1,5 +1,5 @@
 <template name="diaryToday">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-body">
       {{> diary}}
     </div>
