--- a/app/packages/forms/client/templates/field/edit/edit.html
+++ b/app/packages/forms/client/templates/field/edit/edit.html
@@ -1,7 +1,7 @@
 <template name="EditField">
   <div class="fill">
     <div class="contain" style="overflow-y:auto;padding:10px">
-        <div class="box">
+        <div class="box box-info">
           <div class="box-header with-border">
             <h3 class="box-title">Edit Field</h3>
             <span style="float:right">{{> breadcrumb}}</span>
@@ -9,7 +9,7 @@
               {{> quickRemoveButton collection=getCol _id=field._id class="btn btn-danger"}}
             {{/if}}
           </div>
-          <div class="box-body table-responsive">
+          <div class="box-body">
 
       {{#if (can "update" field)}}
         {{> quickForm collection=getCol doc=field schema=schema id="editFieldForm" type="update" omitFields="createdBy" buttonContent="Update"}}
