--- a/app/packages/forms/client/templates/field/insert/insert.html
+++ b/app/packages/forms/client/templates/field/insert/insert.html
@@ -1,11 +1,11 @@
 <template name="InsertField">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">
         Insert field
       </h3>
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
       {{#if Template.subscriptionsReady}}
         {{> quickForm collection=getCol schema=schema id="insertFieldForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
       {{/if}}
