--- a/app/packages/forms/client/templates/form/edit.html
+++ b/app/packages/forms/client/templates/form/edit.html
@@ -1,6 +1,6 @@
 <template name="EditForm">
 
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Edit form</h3>
       {{#if (can "update" form)}}
@@ -9,7 +9,7 @@
 
       {{/if}}
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
 
   {{#if (can "update" form)}}
     {{> quickForm collection=getCol doc=form id="editFormForm" type="update" omitFields="createdBy" buttonContent="Update"}}
