--- a/app/packages/forms/client/templates/form/insert.html
+++ b/app/packages/forms/client/templates/form/insert.html
@@ -1,10 +1,10 @@
 <template name="InsertForm">
 
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Insert form</h3>
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
       {{> quickForm collection=getCol id="insertFormForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
   </div>
