--- a/app/packages/forms/client/templates/form/submissions/submissions.html
+++ b/app/packages/forms/client/templates/form/submissions/submissions.html
@@ -1,5 +1,5 @@
 <template name="submissions">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Submissions - {{title}}</h3>
       <ul style="float:right" class="box-header-list">
