--- a/app/packages/menus/client/templates/menu/edit.html
+++ b/app/packages/menus/client/templates/menu/edit.html
@@ -1,5 +1,5 @@
 <template name="EditMenu">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">
         Edit menu
@@ -8,7 +8,7 @@
         {{> quickRemoveButton collection="Menus" _id=this.menu._id beforeRemove=beforeRemove class="btn btn-danger"}}
       </span>
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
     {{> quickForm collection="Menus" doc=this.menu id="editMenuForm" type="update" omitFields="createdBy" buttonContent="Update"}}
   </div>
 </div>
