--- a/app/packages/menus/client/templates/menu/insert.html
+++ b/app/packages/menus/client/templates/menu/insert.html
@@ -1,9 +1,9 @@
 <template name="InsertMenu">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Insert Menu</h3>
     </div>
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-bodysubmissionsAdminCalendar">
       {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
   </div>
