--- a/app/packages/pages/client/templates/page/insert.html
+++ b/app/packages/pages/client/templates/page/insert.html
@@ -1,9 +1,9 @@
 <template name="InsertPage">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Insert page</h3>
     </div>
-    <div class="box-body table-responsive">
+    <div class="box-body">
   {{> quickForm collection=getCol id="insertPageForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </div>
 </div>
