--- a/app/packages/schedules/client/templates/schedule/insert.html
+++ b/app/packages/schedules/client/templates/schedule/insert.html
@@ -1,9 +1,9 @@
 <template name="InsertSchedule">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Insert Schedule</h3>
     </div>
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-bodyr">
       {{> quickForm collection="Schedules" id="insertScheduleForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
   </div>
