--- a/app/packages/core/client/stylesheets/main.css
+++ b/app/packages/core/client/stylesheets/main.css
@@ -204,3 +204,24 @@ width:430px;
 .ui-dialog .ui-dialog-titlebar {
   padding:0px 0px 0px 3px !important;
 }
+
+.fieldForm button[type="submit"]{
+    display:none;
+}
+
+.fieldList select {
+ margin-top: 10px;
+ margin-left: 3px;
+ margin-right: 3px;
+}
+.fieldList, .fieldsTable, .fieldList td {
+  margin:0;
+  padding:0 !important;
+}
+.fieldList td i {
+  margin-top:3px;
+  margin-left:3px;
+}
+#items tr {
+  cursor: pointer;
+}
