--- a/app/packages/files/client/templates/layouts/navbar/uploads/navbar-uploads.html
+++ b/app/packages/files/client/templates/layouts/navbar/uploads/navbar-uploads.html
@@ -1,7 +1,7 @@
 <template name="navbarUploads">
   <li class="dropdown uploads-menu">
     <!-- Menu toggle button -->
-    <a href="#" id="uploadsNotificationsTrigger" data-toggle="dropdown" >
+    <a href="#" id="uploadsNotificationsTrigger" data-toggle="dropdown">
       <i class="fa fa-upload"></i>
     </a>
     <ul class="dropdown-menu">
@@ -9,26 +9,26 @@
         <!-- inner menu: contains the messages -->
         <a class="clear">clear</a>
         <ul id="uploadsMenu" class="menu">
-          {{#each uploads}}
-              {{#unless this.uploadedAt}}
-                {{> navbarUpload}}
-              {{/unless}}
-          {{/each}}
-        </ul><!-- /.menu -->
+          {{#each uploads}} {{#unless this.uploadedAt}} {{> navbarUpload}} {{/unless}} {{/each}}
+        </ul>
+        <!-- /.menu -->
       </li>
     </ul>
-  </li><!-- /.messages-menu -->
+  </li>
+  <!-- /.messages-menu -->
 </template>
 
 <template name="navbarUpload">
-<li><!-- start message -->
-  <a href="#">
-    <!-- Message title and timestamp -->
-    <h4>
+  <li>
+    <!-- start message -->
+    <a href="#">
+      <!-- Message title and timestamp -->
+      <h4>
       {{> FS.UploadProgressBar}}
     </h4>
-    <!-- The message -->
-    <p>{{this.original.name}}</p>
-  </a>
-</li><!-- end message -->
+      <!-- The message -->
+      <p>{{this.original.name}}</p>
+    </a>
+  </li>
+  <!-- end message -->
 </template>
