fix for form edit

--- a/app/packages/forms/client/templates/form/edit.html
+++ b/app/packages/forms/client/templates/form/edit.html
@@ -26,8 +26,8 @@
               </div>
               <!-- /.box-header -->
               <div class="box-body">
-                {{> EditField field=this}}
-                {{> fieldForm this}}
+                {{> EditField}}
+                {{> fieldForm}}
               </div>
               <!-- /.box-body -->
             </div>
