--- a/app/packages/pages/client/templates/page/list.html
+++ b/app/packages/pages/client/templates/page/list.html
@@ -2,6 +2,7 @@
   <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Pages</h3>
+      <span style="float:right">{{> breadcrumb}}</span>
       <span style="float:right">{{#linkTo route="insertPage"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Page</button>{{/linkTo}}</span>
     </div>
     <div class="box-body">
