--- a/app/packages/signatures/client/templates/signature/insert.html
+++ b/app/packages/signatures/client/templates/signature/insert.html
@@ -3,7 +3,7 @@
     <div class="box-header with-border">
       <h3 class="box-title">Insert Signature</h3>
     </div>
-    <div class="box-bodysubmissionsAdminCalendar">
+    <div class="box-body">
       {{> quickForm collection="Signatures" id="insertSignatureForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
   </div>
