--- a/app/packages/forms/client/templates/field/edit/edit.html
+++ b/app/packages/forms/client/templates/field/edit/edit.html
@@ -12,7 +12,7 @@
           <div class="box-body table-responsive"
 
       {{#if (can "update" field)}}-->
-      {{> quickForm collection=getCol doc=field schema=schema id="editFieldForm" type="update" omitFields="createdBy" buttonContent="Update"}}
+      {{> quickForm collection=getCol doc=this schema=schema id="editFieldForm" type="update" omitFields="createdBy" buttonContent="Update"}}
       <!-- {{else}}
         You do not have permission to update this field.
       {{/if}}
