january first half

--- a/app/packages/menus/client/templates/layouts/menus.html
+++ b/app/packages/menus/client/templates/layouts/menus.html
@@ -9,6 +9,7 @@
         <li>{{#linkTo route="usersList"}}Users{{/linkTo}}</li>
         <li>{{#linkTo route="rolesList"}}Roles{{/linkTo}}</li>
         <li>{{#linkTo route="formsList"}}Forms{{/linkTo}}</li>
+        <li>{{#linkTo route="punchesList"}}Punches{{/linkTo}}</li>
         <li>{{#linkTo route="signaturesList"}}Signatures{{/linkTo}}</li>
     </ul>
   </li>
