--- a/app/packages/menus/client/templates/menu/insert.html
+++ b/app/packages/menus/client/templates/menu/insert.html
@@ -4,7 +4,7 @@
       <h3 class="box-title">Insert Menu</h3>
     </div>
     <div class="box-body">
-      {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+      {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Submit"}}
     </div>
   </div>
 </template>
