Better field naming

--- a/app/packages/menus/client/templates/layouts/menus.html
+++ b/app/packages/menus/client/templates/layouts/menus.html
@@ -10,6 +10,7 @@
         <li>{{#linkTo route="rolesList"}}Roles{{/linkTo}}</li>
         <li>{{#linkTo route="formsList"}}Forms{{/linkTo}}</li>
         <li>{{#linkTo route="punchesList"}}Timekeeping{{/linkTo}}</li>
+        <li>{{#linkTo route="finesList"}}Fines{{/linkTo}}</li>
         <li>{{#linkTo route="signaturesList"}}Signatures{{/linkTo}}</li>
     </ul>
   </li>
