uptime system alpha

--- a/app/packages/accounts/client/templates/user/list.html
+++ b/app/packages/accounts/client/templates/user/list.html
@@ -39,6 +39,9 @@
     {{#callable name="downloadAvatar" userId=_id}}
       <button class="btn btn-info" type="button">Update Avatar</button>
     {{/callable}}
+    {{#callable name="usertransfer" userId=_id}}
+      <button class="btn btn-info" type="button">Tansfer emails</button>
+    {{/callable}}
   {{/if}}
   {{#callable name="changePw" _id=_id}}
     <button class="btn btn-info" type="button">Change Password</button>
